package com.parkalot.api.garage;

import com.parkalot.api.BaseRepository;
import com.parkalot.infrastructure.models.Garage;

public interface GarageRepository extends BaseRepository<Garage> {}
