package com.parkalot.api.invoices;

import com.parkalot.api.BaseRepository;
import com.parkalot.infrastructure.models.Invoice;

public interface InvoiceRepository extends BaseRepository<Invoice> {}
